package com.tunepruner.fourwards.data.plan;

import java.util.ArrayList;

public class AdjustedPlan {
    private ArrayList<AdjustedPlanItem> adjustedPlanItems;
}
